rtsp-media: unref clock (if set) when finalizing

https://bugzilla.gnome.org/show_bug.cgi?id=796814